add zan api origin requests fail
